--- a/Assignment#1/Source/index.html
+++ b/Assignment#1/Source/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="main">
       <h1>Lionel Messi</h1>
-      <img src="./images/messi.jpg" alt="Lionel Messi" class="img" />
+      <img src="./messi.jpg" alt="Lionel Messi" class="img" />
       <p class="img-caption">Lionel Messi</p>
       <div class="tribute-info">
         <p>
